<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!--Common-->
    <string name="delete">Delete</string>
    <string name="load">Load</string>
    <string name="swatches">Swatches</string>
    <string name="name">Name</string>
    <string name="deleted">Deleted</string>
    <string name="required">Required</string>
    <string name="survey">Survey</string>
    <string name="warning">Warning</string>
    <string name="run_test">Run Test</string>
    <string name="start">Start</string>
    <string name="general">General</string>
    <string name="app_slogan">Water Quality System</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="calibrate">Calibrate</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="result">Result</string>
    <string name="camera_busy">Camera Busy</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="close">Close</string>
    <string name="select_test">Select Test</string>
    <string name="save">Save</string>
    <string name="instructions">Instructions</string>
    <string name="analyze">Analyse</string>

    <plurals name="dilutions">
        <item quantity="one">@string/no_dilution</item>
        <item quantity="many">@string/times_dilution</item>
        <item quantity="other">@string/times_dilution</item>
    </plurals>

    <string name="customTests">Custom tests</string>

    <plurals name="minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>

    <!--Software notices-->
    <string name="apache_license_2">Apache License 2.0</string>
    <string name="mit_license">MIT License</string>
    <string name="gnu_license">GNU GPL v2</string>
    <string name="cca_license">CC BY 4.0 International</string>
    <string name="eclipse_public_license">Eclipse Public License 1.0</string>
    <string name="diagnostics_options">Diagnostic Options</string>

    <!--Update-->
    <string name="update_available">New version available. Update to get the most out of your app</string>
    <string name="version_expired">Version expired</string>
    <string name="version_has_expired">This version of the app has expired.</string>
    <string name="uninstall_install_from_store">Please uninstall and then install the latest version from Play Store.</string>
    <string name="update_ready">Update is ready to install</string>
    <string name="update_download_fail">Unable to download update</string>
    <string name="restart">Restart</string>

    <string name="custom_dilution">Custom Dilution</string>
    <string name="enter_dilution_factor">Enter Dilution Factor</string>
    <string name="error_loading_config">Could not load configuration information</string>
    <string name="value_is_required">Value is required</string>
    <string name="enter_titration_result">Enter titration result</string>
    <string name="enter_titration_results">Enter titration results</string>
    <string name="submit_result">Submit Result</string>

    <string name="up_to_with_dilution">Up to %s with dilution</string>

    <!-- Calibration Screen -->
    <string name="calibration">Calibration</string>
    <string name="calibrated">Calibrated</string>
    <string name="calibration_details">Calibration Details</string>
    <string name="expires">Expires</string>
    <string name="expired">Expired</string>
    <string name="could_not_calibrate">Could not calibrate</string>
    <string name="calibration_is_invalid">Invalid calibration</string>
    <string name="try_recalibrating">Try recalibrating</string>
    <string name="reagent_expiry">Reagent expiry</string>
    <string name="error_calibration_expired">Calibration is past its reagent expiry date</string>
    <string name="order_fresh_batch">Please order a fresh batch of reagent and recalibrate</string>

    <!-- Dilution Selection Dialog -->
    <string name="select_dilution">Select amount of dilution</string>
    <string name="no_dilution">No Dilution</string>
    <string name="times_dilution" tools:ignore="PluralsCandidate">%1$d Times Dilution</string>
    <string name="calibrate_with_new_reagent">Recalibrate with fresh reagent</string>
    <!-- Test Progress Screen -->
    <string name="place_device">Place device face down on a flat surface</string>
    <string name="error_test_interrupted">Test was interrupted.</string>
    <string name="do_not_move_device">Do not move the phone during the test</string>
    <string name="error_test_failed">Colour does not match any calibrated colours.</string>
    <string name="check_chamber_placement">Check that the chamber has been placed correctly.</string>
    <!-- Result Screen -->
    <string name="accept_result">Accept Result</string>
    <string name="high_level_recommendation">Retesting with dilution is recommended as level of contamination is high.</string>
    <string name="test_with_dilution">Test with Dilution</string>

    <!-- Permission -->
    <string name="camera_permission">Camera permission is required</string>
    <!-- Alerts -->
    <string name="cannot_start_test">Cannot start test</string>
    <string name="error_test_not_available">Requested test is not available</string>
    <string name="please_contact_support">Please contact technical support</string>
    <string name="camera_not_good">The camera does not meet the minimum requirements.\n\nFor best results, at least 8 megapixel camera is required.</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="stop_test">Stop test</string>

    <!-- Messages -->
    <string name="cannot_use_camera">Can\'t use camera. Make sure flashlight is off and close any apps that may be using the camera</string>
    <string name="camera_not_available">Camera not available</string>
    <string name="camera_required">A back facing camera is required for colorimetric analysis</string>
    <string name="try_restarting">If the problem continues, restart this device</string>
    <string name="cannot_calibrate">Cannot calibrate</string>
    <string name="error_camera_flash_required">A camera flash was not found on this device</string>
    <string name="error_calibration_incomplete">Calibration for %1$s is incomplete</string>
    <string name="do_you_want_to_calibrate">Do you want to calibrate now?</string>
    <string name="screen_pinned">Screen pinned. Press \'Home\' button for more information.</string>
    <!-- Support -->
    <string name="email_support">Email support</string>
    <string name="send_details_to_support">Send details to support for assistance</string>
    <string name="if_you_need_assistance">Type in the issue you want assistance with and send the email.</string>
    <string name="select_email_app">Please select your email app in the next step.</string>
    <string name="create_support_email">Create Support Email</string>
    <string name="creating_message">Creating message</string>
    <!-- About Screen -->
    <string name="copyright">Copyright © ffem</string>
    <string name="legal_information">Legal Information</string>
    <!-- Software notices -->
    <string name="software_notices">Software Notices</string>
    <string name="software_incorporates_material">This software incorporates material from the projects listed below</string>
    <string name="navigate_up">Navigate up</string>
    <string name="calibrate_summary">Calibrate a test with standards</string>

    <string name="titration_entry_error">%1$s has to be less than or equal to %2$s</string>

    <string name="skip">Skip</string>

    <!--Water-->
    <string name="fill_half_with_sample">Fill <b>HALF</b> of the vial with sample water.</string>
    <string name="collect_water_sample">Collect water sample.</string>
    <string name="prepare_sample_ka">Samples containing more than 1500 mg/l K must be diluted with distilled water.</string>
    <string name="prepare_sample_kb">The pH must be within the range 5 – 14. Adjust, if necessary, with calcium hydroxide.</string>
    <string name="finish_kb">Rinse the test vessel with distilled water only.</string>
    <string name="open_one_foil_and_add_powder">Open one foil packet and add powder contents to vial.</string>
    <string name="cap_vial_and_shake_rapidly">Cap vial and shake rapidly for <b>5 seconds</b>. Remove cap.</string>
    <string name="dry_off_excess_water_place_on_towel">Dry off excess water. (e.g. place it on a towel)</string>
    <string name="add_reagent_k1">Add <b>1 drop</b> of <b>reagent K-1</b> on the reaction zone and allow to react for <b>1 minute</b>.</string>
    <string name="fill_bottle_5ml">Fill the provided bottle with <b>5 ml</b> of your water sample.</string>
    <string name="add_10_drops_nh1">Add <b>10 drops</b> of the <b>NH4-1 Reagent</b> to the sample.</string>
    <string name="swirl_and_mix">Swirl the sample to mix the reagent.</string>
    <string name="add_5_drops_po4_1">Add <b>5 drops</b> of the <b>PO4-1 Reagent</b> to the sample.</string>
    <string name="place_smaller_container">Place smaller container in the provided rack.</string>
    <string name="add_6_drops_po4_2">Add <b>6 drops</b> of the <b>PO4-2 Reagent</b> to the smaller container.</string>

    <string name="image_quality">Image quality</string>
    <string name="taking_photo">Taking photo</string>
    <string name="waiting">Waiting</string>
    <string name="no_result">No Result</string>
    <string name="just_a_moment">Just a moment…</string>
    <string name="checking_image_quality">Checking image quality</string>
    <string name="seconds">Sec.</string>
    <string name="detecting_color_card">Looking for colour card</string>
    <string name="ready_for_photo">Ready for photo</string>
    <string name="tilt_camera_in_direction">Tilt camera in direction of arrow</string>
    <string name="move_camera_closer">Move camera closer to the card</string>
    <string name="avoid_shadows_on_card">Please avoid shadows on the card</string>

    <string name="aluminum">Aluminum</string>
    <string name="calcium">Calcium</string>
    <string name="carbonate">Carbonate</string>
    <string name="bicarbonate">Bicarbonate</string>
    <string name="calcium_and_magnesium">Calcium and Magnesium</string>
    <string name="hardness">Hardness</string>
    <string name="chloride">Chloride</string>
    <string name="arsenic">Arsenic</string>
    <string name="total_arsenic">Total Arsenic</string>
    <string name="chromium">Chromium</string>
    <string name="copper">Copper</string>
    <string name="dissolved_oxygen">Dissolved Oxygen</string>
    <string name="fluoride">Fluoride</string>
    <string name="fluoride_high_range">Fluoride - High Range</string>
    <string name="free_chlorine">Residual Chlorine</string>
    <string name="hydrogen_peroxide">Hydrogen Peroxide</string>
    <string name="nitrate">Nitrate</string>
    <string name="ph">pH</string>
    <string name="new_ph">New pH</string>
    <string name="phosphate">Phosphate</string>
    <string name="sulphate">Sulphate</string>
    <string name="total_iron">Total Iron</string>
    <string name="chlorophyll_a">Chlorophyll A</string>
    <string name="magnesium">Magnesium</string>
    <string name="organic_carbon">Organic Carbon</string>
    <string name="potassium">Potassium</string>
    <string name="available_boron">Available Boron</string>
    <string name="available_iron">Available Iron</string>
    <string name="available_nitrogen">Available Nitrogen</string>
    <string name="available_phosphorous">Available Phosphorous</string>
    <string name="available_potassium">Available Potassium</string>
    <string name="new_available_nitrogen">New Available Nitrogen</string>
    <string name="new_available_phosphorous">New Available Phosphorous</string>
    <string name="new_available_potassium">New Available Potassium</string>
    <string name="alkalinity">Alkalinity</string>
    <string name="ammonia">Ammonia</string>
    <string name="nitrite">Nitrite</string>
    <string name="ammonia_low_range">Ammonia - Low Range</string>
    <string name="nitrite_low_range">Nitrite - Low Range</string>
    <string name="zinc">Zinc</string>
    <string name="total_hardness">Total Hardness</string>
    <string name="total_alkalinity">Total Alkalinity</string>
    <string name="titration">Titration</string>
    <string name="redo">Redo</string>
    <string name="remove_response">Remove response</string>
</resources>