...

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/layoutDilutions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
...
                android:textColor="#d6f6fdf6"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonNoDilution"
            style="@style/Button"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:minHeight="70dp"
            android:minWidth="260dp"
            android:text="@string/no_dilution"
...
