...
                android:textSize="16sp"
                tools:text="22-Dec-2015" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditCalibration"
            style="@style/floating_action_button_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/layoutTitleBar"
            android:layout_alignParentEnd="true"
            android:onClick="onEditCalibration"
...
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/gray" />

                <Button
                    android:id="@+id/buttonRunTest"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
...
